[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/menus/new_game_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/leader_selection/leader_select_item.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/EquipmentProLabel.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/EquipmentPro.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/design.png" type="Texture" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 35, 175, 86 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0
modulate_color = Color( 1, 1, 1, 0.941176 )

[sub_resource type="DynamicFont" id=12]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="ButtonGroup" id=10]

[sub_resource type="ButtonGroup" id=9]

[node name="new_game_menu" type="ItemList"]
margin_left = 100.0
margin_top = 50.0
margin_right = 500.0
margin_bottom = 550.0
rect_min_size = Vector2( 400, 500 )
custom_styles/bg = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = -234.0
margin_right = 166.0
margin_bottom = 227.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 332.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Team selection"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 332.0
margin_bottom = 68.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 21.0
margin_top = 4.0
margin_right = 127.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Select map:"

[node name="3_lane_checkbox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 131.0
margin_right = 219.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
pressed = true
group = SubResource( 10 )
text = "3-lane"

[node name="1_lane_checkbox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 223.0
margin_right = 311.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
group = SubResource( 10 )
text = "1-lane"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 332.0
margin_bottom = 76.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 332.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 322.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 1.0
margin_right = 131.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
custom_colors/font_color = Color( 0.258824, 0.52549, 0.65098, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Blue team"
align = 1
valign = 1

[node name="blue_team_checkbox" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 135.0
margin_right = 159.0
margin_bottom = 24.0
pressed = true
group = SubResource( 9 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 260 )

[node name="blue_team_container" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 160.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="leader_select_item" parent="VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer/blue_team_container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 70.0

[node name="add_leader_blue" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 160.0
margin_bottom = 322.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Add character"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 168.0
margin_bottom = 322.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 332.0
margin_bottom = 322.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 160.0
margin_bottom = 24.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 1.0
margin_right = 131.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
custom_colors/font_color = Color( 0.788235, 0.305882, 0.305882, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Red team"
align = 1
valign = 1

[node name="red_team_checkbox" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_left = 135.0
margin_right = 159.0
margin_bottom = 24.0
group = SubResource( 9 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 260 )

[node name="red_team_container" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 160.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="leader_select_item" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/red_team_container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 70.0

[node name="add_leader_red" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 292.0
margin_right = 160.0
margin_bottom = 322.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Add character"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 406.0
margin_right = 332.0
margin_bottom = 416.0
custom_constants/separation = 10

[node name="start_game_button" type="Button" parent="VBoxContainer"]
margin_top = 420.0
margin_right = 332.0
margin_bottom = 461.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Start game"

[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/add_leader_blue" to="." method="handle_add_leader" binds= [ "blue" ]]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer2/add_leader_red" to="." method="handle_add_leader" binds= [ "red" ]]
[connection signal="pressed" from="VBoxContainer/start_game_button" to="." method="_on_start_game_button_pressed"]
